--- a/app.json
+++ b/app.json
@@ -48,7 +48,7 @@
       "description": "The phone numbers of the users who you want to be admin for the bot (should be in international format without + and multiple numbers must be separated by a comma \",\").",
       "value": "2349066528353"
     },
-    "PUBLIC": {
+    "MODE": {
       "description": "Worktype of your bot. Use public or private. If it is private, then only the bot number can use it. If public, then everyone can use it.",
       "value": "public"
     },
