--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ CHANNEL_JID=120363315231436175@newsletter
 AUTO_TYPING=false
 AUTO_RECORD=false
 AUTO_VIEW_STATUS=true
-AUTOSTATUS_REACT=false
+AUTOSTATUS_REACT=true
 AUTO_LIKE_EMOJI=💚
 LEVELUP=false
 ANTIVIEWONCE=false
